--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                       </h5>
                     </div>
                     <h5 class="fst-italic">
-                      Assistant Teacher Signing School & College
-                      Journalists, Mirsarai 24 TV and Sangbad Pratidin.
+                      Assistant Teacher Shining School & College
+                      Journalists, Mirsarai 24 TV and Sangbad Pratidin.(News)
                     </h5>
                     <h5 class="fst-italic">
                       Educational Info:
