--- a/index.html
+++ b/index.html
@@ -147,10 +147,18 @@
                     <h5 class="fst-italic">
                       Educational Info:
                     </h5>
-                    <h6>LLB (<small>Practice on going Feni Court</small>)</h6>
-                    <h6>MSS (<small>National University</small>)</h6>
-                    <h6>BSS (<small>National University</small>)</h6>
+                    <h6>LLB (<small><i>Practice on going Feni Court</i></small>)</h6>
+                    <h6>MSS (<small><i>National University</i></small>)</h6>
+                    <h6>BSS (<small><i>National University</i></small>)</h6>
+                    <h6 class="fst-italic py-4"><strong>Professional Summary:</strong><br>
+                      Experienced web designer and developer with a passion for creating visually appealing and user-friendly websites. Proficient in HTML, CSS, JavaScript, and Adobe Creative Suite. Skilled in project management and client communication.</h6>
+                      <h6><strong>Experience:</strong><br>
 
+                        Web Designer and Developer, ABC Company (2018-present)
+                        Designed and developed websites for clients using HTML, CSS, and JavaScript
+                        Managed multiple projects simultaneously and met deadlines consistently
+                        Collaborated with clients and internal teams to ensure website design and functionality met project goals
+                        Improved website user experience by implementing responsive design and accessibility best practices</h6>
                   </div>
                 </div>
               </div>
